54th commit - Added cards in store page

--- a/feature.html
+++ b/feature.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>index</title>
+<title>Store</title>
 <link href="style.css" rel="stylesheet" type="text/css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
@@ -65,15 +65,36 @@
   <div class="featureinner1">
     <h1>UNDERTAKE THE NEW CAMPAIGN</h1>
     <br>
-    <p>Savathûn, Sword-Breaker, and Sister of Shapes. Savathûn, Sword-Breaker, and Sister of Shapes. Those who are determined to comprehend the Demon Queen's mysterious hold over the Light are awaited. She gives her men a new sense of purpose and gives them power they have never experienced. Explorer, come. Enter her Throne World to take part in the most successful campaign yet and reclaim the light.</p>
+    <p style="margin-bottom: 10px;">Savathûn, Sword-Breaker, and Sister of Shapes. Savathûn, Sword-Breaker, and Sister of Shapes. Those who are determined to comprehend the Demon Queen's mysterious hold over the Light are awaited. She gives her men a new sense of purpose and gives them power they have never experienced. Explorer, come. Enter her Throne World to take part in the most successful campaign yet and reclaim the light.</p>
   </div>
   <div class="featureinner">
     <video src="Resources/Trailer.mp4" controls style="width: 80%;"></video>
   </div>
 </div>
-	<hr class="new1">
-	<p class="new1-featured"> DETAILS </p>
-
+<hr class="new1">
+<p class="new1-featured"> DETAILS </p>
+<div class="details">
+  <div class="featurecolumn">
+    <div class="card"> <img src="Resources/feature-6.jpg" alt="" class="imgstyle">
+      <p>Savathûn's Throne World is a twisted wonderland where a precarious balance of power exists. Everything she hides is here, from the glittering palace to the murky swamp.</p>
+    </div>
+  </div>
+  <div class="featurecolumn">
+    <div class="card"> <img src="Resources/feature-2.jpg" alt="" class="imgstyle">
+      <p>Learn how to use the new crafting system to make unique bespoke weapons using complex stat pools, mods, and shaders. Never take a chance when battling a deity.</p>
+    </div>
+  </div>
+  <div class="featurecolumn">
+    <div class="card"> <img src="Resources/feature-3.jpg" alt="" class="imgstyle">
+      <p>At the Relic, a brand-new weapon typology sets out on its adventure. Master your Glaive to perform potent melee combos, launch projectiles, and deploy a potent energy shield once it has been fine-tuned to perfection.</p>
+    </div>
+  </div>
+  <div class="featurecolumn">
+    <div class="card"> <img src="Resources/feature-4.jpg" alt="" class="imgstyle">
+      <p>With Stasis, a new elemental subclass with roots in Darkness, Explorers who transform into Shadebinders, Revenants, or Behemoths will learn how to control this extraordinary ability to rule the battlefield.</p>
+    </div>
+  </div>
+</div>
 <footer class="footer">
   <div class="container">
     <div class="row">
