--- a/feature.html
+++ b/feature.html
@@ -36,21 +36,21 @@
   </div>
 </header>
 <div class="firstfeature">
-  <video src="Resources/feature-2.mp4" autoplay muted loop class="featurevid2"></video>
-  <img src="Resources/feature2mobile.jpg" class="featureimg2">
+  <video src="Resources/feature-2.mp4" autoplay muted loop class="featurevid2	"></video>
+  <img src="Resources/feature2mobile.jpg" alt="" class="featureimg2">
   <div class="firstfeatureouter">
-    <div class="firstfeatureinner1"><img src="Resources/featureicon.png" class="iconfeature">
+    <div class="firstfeatureinner1"><img src="Resources/featureicon.png" alt="" class="iconfeature">
       <p>DIVINE<br>
         THE HIVE QUEEN</p>
     </div>
     <hr class="new2">
     <div class="firstfeatureinner">
-      <div class="feature1"><img src="Resources/feature1img.jpg" class="feature1img">
+      <div class="feature1"><img src="Resources/feature1img.jpg" alt="" class="feature1img">
         <p> Deluxe Edition </p>
       </div>
     </div>
     <div class="firstfeatureinner">
-      <div class="feature1"><img src="Resources/feature2img.jpg" style="width: 80px;">
+      <div class="feature1"><img src="Resources/feature2img.jpg" alt="" style="width: 80px;">
         <p class="feature1text"> Standard Edition </p>
       </div>
     </div>
