57th commit - finalizing all code

--- a/feature.html
+++ b/feature.html
@@ -50,7 +50,7 @@
       </div>
     </div>
     <div class="firstfeatureinner">
-      <div class="feature1"><img src="Resources/feature2img.jpg" alt="" style="width: 80px;">
+      <div class="feature1"><img src="Resources/feature2img.jpg" alt="" class="feature1img">
         <p class="feature1text"> Standard Edition </p>
       </div>
     </div>
@@ -65,10 +65,10 @@
   <div class="featureinner1">
     <h1>UNDERTAKE THE NEW CAMPAIGN</h1>
     <br>
-    <p style="margin-bottom: 10px;">Savathûn, Sword-Breaker, and Sister of Shapes. Savathûn, Sword-Breaker, and Sister of Shapes. Those who are determined to comprehend the Demon Queen's mysterious hold over the Light are awaited. She gives her men a new sense of purpose and gives them power they have never experienced. Explorer, come. Enter her Throne World to take part in the most successful campaign yet and reclaim the light.</p>
+    <p>Savathûn, Sword-Breaker, and Sister of Shapes. Savathûn, Sword-Breaker, and Sister of Shapes. Those who are determined to comprehend the Hive Queen's mysterious hold over the Light are awaited. She gives her men a new sense of purpose and gives them power they have never experienced. Explorer, come. Enter her Throne World to take part in the most successful campaign yet and reclaim the light.</p>
   </div>
   <div class="featureinner">
-    <video src="Resources/Trailer.mp4" controls style="width: 80%;"></video>
+    <video src="Resources/Trailer.mp4" controls class="trailervid"></video>
   </div>
 </div>
 <hr class="new1">
