--- a/login.html
+++ b/login.html
@@ -61,11 +61,11 @@
       </form>
       <h3>Login with desired platform</h3>
       <ul class="sci">
-        <li class="fab fa-facebook-f" style="margin-right: 1%;"></li>
-        <li class="fab fa-playstation"  style="margin-right: 1%;"></li>
-        <li class="fab fa-xbox"  style="margin-right: 1%;"></li>
-        <li class="fab fa-steam"  style="margin-right: 1%;"></li>
-        <li class="fab fa-twitch"  style="margin-right: 1%;"></li>
+        <li class="fab fa-facebook-f"></li>
+        <li class="fab fa-playstation"></li>
+        <li class="fab fa-xbox"></li>
+        <li class="fab fa-steam"></li>
+        <li class="fab fa-twitch"></li>
       </ul>
     </div>
   </div>
