--- a/feature.html
+++ b/feature.html
@@ -6,6 +6,7 @@
 <link href="style.css" rel="stylesheet" type="text/css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+<link rel="icon" href="Resources/featureicon.png">
 </head>
 
 <body>
