--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <title>index</title>
 <link href="style.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+<link rel="icon" href="Resources/featureicon.png">
 </head>
 
 <body>
