59th commits - Final Draft

--- a/feature.html
+++ b/feature.html
@@ -3,13 +3,17 @@
 <head>
 <meta charset="UTF-8">
 <title>Store</title>
+<!-- CSS -->
 <link href="style.css" rel="stylesheet" type="text/css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!-- SOCIAL MEDIA ICONS CSS -->
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+<!-- WEBSITE ICON -->
 <link rel="icon" href="Resources/featureicon.png">
 </head>
 
 <body>
+<!-- NAVIGATION BAR -->
 <header id="navbar">
   <div class="logo"> <a href="index.html"> <img src="Resources/logo.png" alt="" class="navlogo">
     <p> HALFBYTE</p>
@@ -30,16 +34,19 @@
   <form action="login.html" method="get">
     <button class="nav-button"> PLAY DIVINE </button>
   </form>
+  <!-- NAVIGATION BAR HAMBURGER ICON WHEN IT'S IN MOBILE VIEW -->
   <div class= "hamburger">
     <div class="line"></div>
     <div class="line"></div>
     <div class="line"></div>
   </div>
 </header>
+<!-- THUMBNAIL VIDEO WITH BUTTON THAT BRINGS YOU TO LOGIN PAGE -->
 <div class="firstfeature">
   <video src="Resources/feature-2.mp4" autoplay muted loop class="featurevid2	"></video>
   <img src="Resources/feature2mobile.jpg" alt="" class="featureimg2">
-  <div class="firstfeatureouter">
+  <div class="firstfeatureouter"> 
+    <!-- STORE CARD THAT CONSISTS OF IMAGES TOGETHER WITH THE STANDARD EDITION AND DELUXE EDTION -->
     <div class="firstfeatureinner1"><img src="Resources/featureicon.png" alt="" class="iconfeature">
       <p>DIVINE<br>
         THE HIVE QUEEN</p>
@@ -62,11 +69,12 @@
     </div>
   </div>
 </div>
+<!-- GAME INFORMATION (WHAT IS THE GAME ABOUT) -->
 <div class="featureouter">
   <div class="featureinner1">
     <h1>UNDERTAKE THE NEW CAMPAIGN</h1>
     <br>
-    <p>Savathûn, Sword-Breaker, and Sister of Shapes. Savathûn, Sword-Breaker, and Sister of Shapes. Those who are determined to comprehend the Hive Queen's mysterious hold over the Light are awaited. She gives her men a new sense of purpose and gives them power they have never experienced. Explorer, come. Enter her Throne World to take part in the most successful campaign yet and reclaim the light.</p>
+    <p>Savathûn, Sword-Breaker, and Sister of Shapes. Those who are determined to comprehend the Hive Queen's mysterious hold over the Light are awaited. She gives her men a new sense of purpose and gives them power they have never experienced. Explorer, come. Enter her Throne World to take part in the most successful campaign yet and reclaim the light.</p>
   </div>
   <div class="featureinner">
     <video src="Resources/Trailer.mp4" controls class="trailervid"></video>
@@ -74,6 +82,7 @@
 </div>
 <hr class="new1">
 <p class="new1-featured"> DETAILS </p>
+<!-- CONSISTS OF WHAT THE GAME OFFERS WHEN USER PLAYS THE GAME FOR E.G. USER GETS TO HAVE A CRAFTING SYSTEM TO MAKE UNIQUE WEAPONS -->
 <div class="details">
   <div class="featurecolumn">
     <div class="card"> <img src="Resources/feature-6.jpg" alt="" class="imgstyle">
@@ -96,6 +105,7 @@
     </div>
   </div>
 </div>
+<!-- FOOTER THAT INCLUDES SOCIAL MEDIA ICONS -->
 <footer class="footer">
   <div class="container">
     <div class="row">
@@ -135,6 +145,7 @@
     </div>
   </div>
 </footer>
+<!-- JAVASCRIPT --> 
 <script src= "script.js" async></script>
 </body>
 </html>
