--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>index</title>
+<!-- CSS -->
 <link href="style.css" rel="stylesheet" type="text/css">
+<!-- SOCIAL MEDIA ICONS CSS -->
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+<!-- WEBSITE ICON -->
 <link rel="icon" href="Resources/featureicon.png">
 </head>
 
 <body>
+<!-- NAVIGATION BAR -->
 <header id="navbar">
   <div class="logo"> <a href="index.html"> <img src="Resources/logo.png" alt="" class="navlogo">
     <p>HALFBYTE</p>
@@ -30,12 +34,14 @@
   <form action="login.html" method="get">
     <button class="nav-button"> PLAY DIVINE </button>
   </form>
+  <!-- NAVIGATION BAR HAMBURGER ICON WHEN IT'S IN MOBILE VIEW -->
   <div class="hamburger">
     <div class="line"></div>
     <div class="line"></div>
     <div class="line"></div>
   </div>
 </header>
+<!-- THUMBNAIL VIDEO WITH BUTTON THAT BRINGS YOU TO LOGIN PAGE -->
 <div id="box-search">
   <div class="thumbnail">
     <video
@@ -56,6 +62,7 @@
     </div>
   </div>
 </div>
+<!-- FEATURED SECTION WITH 4 PICTURES THAT ARE ZOOMED, BLURRED AND TEXT POP UP WHEN HOVERED FROM THE PICTURES -->
 <hr class="new1">
 <p class="new1-featured"> FEATURED </p>
 <br>
@@ -74,6 +81,7 @@
   </div>
 </div>
 <hr class="new1">
+<!-- LATEST NEWS SECTION THAT PROVIDES THE LATEST UPDATES ON WHAT'S GOING ON WITH THE GAME -->
 <p class="new1-featured"> LATEST NEWS </p>
 <br>
 <div class="news">
@@ -106,6 +114,7 @@
   </div>
 </div>
 <br>
+<!-- FOOTER THAT INCLUDES SOCIAL MEDIA ICONS -->
 <footer class="footer">
   <div class="container">
     <div class="row">
@@ -145,6 +154,7 @@
     </div>
   </div>
 </footer>
+<!-- JAVASCRIPT --> 
 <script src= "script.js" async></script>
 </body>
 </html>
