--- a/login.html
+++ b/login.html
@@ -3,13 +3,17 @@
 <head>
 <meta charset="UTF-8">
 <title>Login</title>
+<!-- CSS -->
 <link href="style.css" rel="stylesheet" type="text/css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!-- SOCIAL MEDIA ICONS CSS -->
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+<!-- WEBSITE ICON -->
 <link rel="icon" href="Resources/featureicon.png">
 </head>
 
 <body>
+<!-- NAVIGATION BAR -->
 <header id="navbar">
   <div class="logo"> <a href="index.html"> <img src="Resources/logo.png" alt="" class="navlogo">
     <p> HALFBYTE</p>
@@ -36,6 +40,7 @@
     <div class="line"></div>
   </div>
 </header>
+<!-- LOGIN/SIGN UP FORM THAT EITHER PROMPTS EXISITNG USERS TO LOGIN OR NEW USERS TO SIGN UP -->
 <section>
   <div class="imgBx"> <img src="Resources/login.jpg" alt=""> </div>
   <div class="contentBx">
@@ -60,6 +65,7 @@
           <p>Don't have an account? <a href="#">Sign up</a></p>
         </div>
       </form>
+      <!-- SIGN UP FORM THAT EITHER PROMPTS NEW USERS TO SIGN UP VIA SOCIAL PLATFORM -->
       <h3>Login with desired platform</h3>
       <ul class="sci">
         <li class="fab fa-facebook-f"></li>
@@ -71,6 +77,7 @@
     </div>
   </div>
 </section>
+<!-- FOOTER THAT INCLUDES SOCIAL MEDIA ICONS -->
 <footer class="footer">
   <div class="container">
     <div class="row">
@@ -110,6 +117,7 @@
     </div>
   </div>
 </footer>
+<!-- JAVASCRIPT --> 
 <script src= "script.js" async></script>
 </body>
 </html>
